--- a/configuracion.html
+++ b/configuracion.html
@@ -79,13 +79,15 @@
 
     <script src="js/api.js"></script>
     <script>
+        const API_URL = 'https://lotify-backend.onrender.com/api'; // Inyección de URL de Render
         const token = localStorage.getItem('userToken');
         if(!token) window.location.href = 'index.html';
 
         // 1. Cargar Datos
         async function loadData() {
             try {
-                const res = await fetch('http://localhost:3000/api/auth/me', { headers: { 'Authorization': `Bearer ${token}` } });
+                // FIX: Reemplazar fetch local por fetch a API_URL
+                const res = await fetch(`${API_URL}/auth/me`, { headers: { 'Authorization': `Bearer ${token}` } });
                 const user = await res.json();
                 
                 document.getElementById('profile-email').value = user.email;
@@ -128,7 +130,8 @@
                 const formData = new FormData();
                 formData.append('logo', input.files[0]);
 
-                const res = await fetch('http://localhost:3000/api/auth/logo', {
+                // FIX: Reemplazar fetch local por fetch a API_URL
+                const res = await fetch(`${API_URL}/auth/logo`, {
                     method: 'PUT',
                     headers: { 'Authorization': `Bearer ${token}` },
                     body: formData
