--- a/equipo.html
+++ b/equipo.html
@@ -178,6 +178,7 @@
 
     <script src="js/api.js"></script>
     <script>
+        const API_URL = 'https://lotify-backend.onrender.com/api'; // Inyección de URL de Render
         const token = localStorage.getItem('userToken');
         if(!token) window.location.href = 'index.html';
         
@@ -185,10 +186,17 @@
         let userToDeleteId = null;
         let allUsers = []; // Cache local para edición
 
-        try {
-            const payload = JSON.parse(atob(token.split('.')[1]));
-            currentUserId = payload.id;
-        } catch(e){}
+        // FIX: Reemplazar fetch local por fetch a API_URL
+        fetch(`${API_URL}/auth/me`, { headers: { 'Authorization': `Bearer ${token}` } })
+            .then(r => r.json())
+            .then(user => {
+                try {
+                    const payload = JSON.parse(atob(token.split('.')[1]));
+                    currentUserId = payload.id;
+                } catch(e){}
+                loadTeam(); 
+            })
+            .catch(() => {});
 
         // --- LÓGICA DEL OJITO (PASSWORD) ---
         const togglePassword = document.getElementById('togglePassword');
@@ -281,7 +289,8 @@
 
         async function loadTeam() {
             try {
-                const res = await fetch('http://localhost:3000/api/auth/team', { 
+                // FIX: Reemplazar fetch local por fetch a API_URL
+                const res = await fetch(`${API_URL}/auth/team`, { 
                     headers: { 'Authorization': `Bearer ${token}` } 
                 });
                 
@@ -295,7 +304,7 @@
                 tbody.innerHTML = '';
 
                 if(allUsers.length === 0) {
-                    tbody.innerHTML = '<tr><td colspan="5" style="text-align:center;">No hay usuarios.</td></tr>';
+                    tbody.innerHTML = '<tr><td colspan="5" style="text-align:center; padding:30px;">No hay usuarios.</td></tr>';
                     return;
                 }
 
@@ -340,7 +349,8 @@
             btn.innerText = '...'; btn.disabled = true;
 
             try {
-                const res = await fetch(`http://localhost:3000/api/auth/team/${userToDeleteId}`, {
+                // FIX: Reemplazar fetch local por fetch a API_URL
+                const res = await fetch(`${API_URL}/auth/team/${userToDeleteId}`, {
                     method: 'DELETE', headers: { 'Authorization': `Bearer ${token}` }
                 });
                 if(!res.ok) throw new Error('Error al eliminar');
@@ -368,7 +378,7 @@
             const data = Object.fromEntries(formData.entries());
 
             try {
-                let url = 'http://localhost:3000/api/auth/team';
+                let url = `${API_URL}/auth/team`; // FIX: Usar API_URL
                 let method = 'POST';
 
                 if (editId) {
@@ -376,6 +386,7 @@
                     method = 'PUT'; // Cambio a PUT para editar
                 }
 
+                // FIX: Reemplazar fetch local por fetch a API_URL
                 const res = await fetch(url, {
                     method: method,
                     headers: { 'Content-Type': 'application/json', 'Authorization': `Bearer ${token}` },
