--- a/dashboard.html
+++ b/dashboard.html
@@ -1079,7 +1079,7 @@
         }
 
         function openShareModal(slug) {
-            const publicLink = `${window.location.origin}/frontend/public.html?s=${slug}`;
+            const publicLink = `${window.location.origin}/public.html?s=${slug}`;
             const iframeCode = `<iframe src="${publicLink}" width="100%" height="600px" frameborder="0" style="border: none;"></iframe>`;
             
             document.getElementById('share-link-input').value = publicLink;
