correccion frontend publico carpreta

--- a/dashboard.html
+++ b/dashboard.html
@@ -1131,7 +1131,7 @@
                         month: 'short',
                         year: 'numeric'
                     });
-                    const publicLink = `${window.location.origin}/frontend/public.html?s=${p.slug_publico}`;
+                    const publicLink = `${window.location.origin}/public.html?s=${p.slug_publico}`;
                     
                     let imageHTML = '';
                     if (p.imagen_360_url) {
